--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,35 @@ body {
   font-size: 1.3rem;
   line-height: 1.3;
   scroll-behavior: smooth;
-  font-family: "Barlow Semi Condensed", sans-serif; }
+  font-family: "Barlow Semi Condensed", sans-serif;
+  background-color: #cfcfcf; }
+
+.container {
+  height: 95vh;
+  display: grid;
+  grid-template-columns: 1fr repeat(4, 20rem) 1fr;
+  grid-template-rows: 1fr repeat(2, 20rem) 1fr;
+  grid-gap: 3rem; }
+  .container .card {
+    box-shadow: 0 2rem 4rem rgba(25, 33, 46, 0.4);
+    border-radius: .5rem; }
+  .container .daniel {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+    background-color: #7541c8; }
+  .container .jonathan {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+    background-color: #48556a; }
+  .container .kira {
+    grid-column: 5 / 6;
+    grid-row: 2 / 4;
+    background-color: white; }
+  .container .jeanette {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    background-color: white; }
+  .container .patrick {
+    grid-column: 3 / 5;
+    grid-row: 3 / 4;
+    background-color: #19212e; }
