--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,20 +1,19 @@
 .card{
+    @include flexbox(flex-start);
+    flex-direction: column;
+    justify-content: space-around;
+
     box-shadow: 0 2rem 4rem rgba($Very-dark-blackish-blue, .4);
     border-radius: .5rem;
     padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
 
     & > *:not(:last-child) {
         margin-bottom: .5rem;
     }
 
     &__profile{
-        display: flex;
-        align-items: center;
-
+    @include flexbox(center);
+        
     }
 
     &__picture{
@@ -34,6 +33,5 @@
         margin-left: 1.5rem;
         margin-top: -1rem;
     }
-
 
 }
