--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,8 @@ body {
   .container .daniel {
     grid-column: 2 / 4;
     grid-row: 2 / 3;
-    background-color: #7541c8; }
+    background-color: #7541c8;
+    position: relative; }
     @media only screen and (max-width: 56.25em) {
       .container .daniel {
         grid-column: 2 / 4; } }
@@ -91,6 +92,14 @@ body {
       .container .daniel {
         grid-column: 2/3;
         grid-row: 2 / 4; } }
+    .container .daniel::before {
+      content: "\201C";
+      font-size: 50rem;
+      position: absolute;
+      top: -17rem;
+      right: 0;
+      color: #cfcfcf;
+      opacity: .4; }
   .container .jonathan {
     grid-column: 4 / 5;
     grid-row: 2 / 3;
